--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500;600;700&display=swap');
+@import 'partials/variables';
 @import 'partials/framework';
 @import 'partials/common';
 @import 'partials/header';
+@import 'partials/section-01';
