--- a/src/style/Partials/_variables.scss
+++ b/src/style/Partials/_variables.scss
@@ -1,3 +1,6 @@
+//Google fonts
+@import url('https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500;600;700&display=swap');
+
 //framework width
 $lg-breakpoint: 990px;
 $md-breakpoint: 480px;
@@ -7,3 +10,66 @@ $text-color: #573f2c; //brown
 $primary-color: #fee7d2; //cream
 $secondary-color: #2c4692; //blue
 $bg-color: white;
+
+
+//Positioning
+@mixin flex-center-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@mixin flex-center-between{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@mixin flex-center-start{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+@mixin flex-col-center-start{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+@mixin flex-col-end-center{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+@mixin flex-col-start-start{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+@mixin flex-center-end{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+
+//elements
+@mixin button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  padding:0.2rem 0.5rem;
+  border-radius: 10px;
+  font-size: 1rem;
+  font-weight: 500;
+  img {
+    height: 30px;
+  }
+}
