--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500;600;700&display=swap');
-@import 'partials/variables';
-@import 'partials/framework';
-@import 'partials/common';
-@import 'partials/header';
-@import 'partials/section-01';
+@use 'partials/variables';
+@use 'partials/framework';
+@use 'partials/common';
+@use 'partials/header';
+@use 'partials/section-01';
+@use 'partials/section-02';
