--- a/src/style/Partials/_section-01.scss
+++ b/src/style/Partials/_section-01.scss
@@ -4,6 +4,8 @@
 
   //General
   background-color: variables.$primary-color;
+  color: variables.$text-color-light;
+
 
   * {
     padding: 1rem 0;
