--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -4,3 +4,5 @@
 @use 'partials/header';
 @use 'partials/section-01';
 @use 'partials/section-02';
+@use 'partials/section-03';
+@use 'partials/footer';
