--- a/src/style/Partials/_common.scss
+++ b/src/style/Partials/_common.scss
@@ -1,6 +1,7 @@
 @use 'variables';
 
 //General settings
+
 body{
   background-color: variables.$bg-color;
   color: variables.$text-color;
@@ -24,7 +25,8 @@ body{
     font-size: 0.8rem;
     font-weight: 300;
     line-height: 1.3rem;
-    color: variables.$secondary-color;
+    text-decoration: none;
+    color: variables.$text-color;
   }
 }
 
@@ -36,8 +38,8 @@ body{
 //Buttons
 .primary-button{
   @include variables.button;
-  border: 1px solid variables.$secondary-color;
-  color: variables.$secondary-color;
+  border: 1px solid variables.$text-color;
+  color: variables.$text-color;
   background-color: variables.$bg-color;
 }
 
@@ -46,5 +48,5 @@ body{
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   color: variables.$bg-color;
-  background-color: variables.$secondary-color;
+  background-color: variables.$text-color;
 }
