--- a/src/style/Partials/_section-01.scss
+++ b/src/style/Partials/_section-01.scss
@@ -3,7 +3,7 @@
 #sec-01{
 
   //General
-  background-color: variables.$primary-color;
+  background-color: variables.$bg-dark;
   color: variables.$text-color-light;
 
 
