--- a/src/style/Partials/_section-03.scss
+++ b/src/style/Partials/_section-03.scss
@@ -1,7 +1,7 @@
 @use 'variables';
 
 #sec-03{
-  background-color: variables.$primary-color;
+  background-color: variables.$bg-dark;
   color: variables.$text-color-light;
   padding: 3rem 0;
 
