--- a/src/style/Partials/_variables.scss
+++ b/src/style/Partials/_variables.scss
@@ -6,11 +6,12 @@ $lg-breakpoint: 990px;
 $md-breakpoint: 480px;
 
 //Colors
-$text-color: #0414B3; //dark blue
+$text-color: #7f14d4; // electric violet
 $text-color-light: white;
-$primary-color: #7f14d4; // electric violet
-$secondary-color: #de14ee; //blue
+$primary-color: #3e14e9; //persian blue
+$secondary-color: #0414b3; //dark blue
 $bg-color: white;
+$bg-dark: rgba(62, 20, 233, 0.7); //persian blue 50%
 
 
 //Positioning
