--- a/src/style/Partials/_footer.scss
+++ b/src/style/Partials/_footer.scss
@@ -2,8 +2,7 @@
 
 footer{
   //General
-  min-height: 300px;
-  padding: 3rem 0;
+  padding: 3rem 0 2rem 0;
   h4{
     padding-bottom: 2rem;
   }
@@ -24,14 +23,13 @@ footer{
   }
 
   //left text and logo
-
   .row > [class*='col-']:first-child{
     @include variables.flex-center-start;
+    margin-bottom: 3rem;
 
     h4{
       line-height: 1.2rem;
       padding-bottom: 0;
-
     }
 
     a{
