--- a/src/style/Partials/_framework.scss
+++ b/src/style/Partials/_framework.scss
@@ -7,7 +7,6 @@
 }
 
 @mixin container{
-
   &:after{
     content: "";
     display: table;
@@ -22,12 +21,15 @@
 .container{
   @include container;
   max-width: variables.$lg-breakpoint;
+  min-width: variables.$md-breakpoint;
+  padding: 0 2rem;
   margin: 0 auto;
 }
 
 .container-full{
   @include container;
   width: 100%;
+  max-width: 1700px;
 }
 
 @media screen and (min-width: variables.$lg-breakpoint){
@@ -59,6 +61,10 @@
     .col-lg-offset-#{$i} {
       width: 100% / 12 * $i;
     }
+    .col-lg-12{
+      width: 100%;
+    }
+
   }
 }
 
@@ -67,6 +73,10 @@
     .col-md-offset-#{$i} {
       width: 100% / 12 * $i;
     }
+    .col-md-12{
+      width: 100%;
+    }
+
   }
 }
 
@@ -75,5 +85,27 @@
     .col-sm-offset-#{$i} {
       width: 100% / 12 * $i;
     }
+    .col-sm-12{
+      width: 100%;
+    }
+  }
+}
+
+
+@media screen and (min-width: variables.$lg-breakpoint){
+  .hidden-lg {
+      display: none!important;
+  }
+}
+
+@media screen and (min-width: variables.$md-breakpoint) and (max-width: variables.$lg-breakpoint){
+  .hidden-md {
+      display: none!important;
+  }
+}
+
+@media screen and (max-width: variables.$md-breakpoint){
+  .hidden-sm {
+      display: none!important;
   }
 }
