--- a/src/style/Partials/_section-02.scss
+++ b/src/style/Partials/_section-02.scss
@@ -2,10 +2,11 @@
   padding: 2rem 0;
   .row{
     min-height: 550px;
+    padding: 3rem;
   }
 
   [class*="col-lg-offset-"]{
-    min-height: 500px;
+    min-height: 550px;
   }
 
   img{
@@ -13,6 +14,7 @@
   }
 
   img.smaller{
+    max-width: 80%;
     max-height: 300px;
   }
   h3{
